tests/ui/proc-macro/span-from-proc-macro.stderr
error[E0412]: cannot find type `MissingType` in this scope
  --> $DIR/auxiliary/span-from-proc-macro.rs:21:1
   |
LL | pub fn error_from_attribute(_args: TokenStream, _input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | not found in this scope
   | in this expansion of `#[error_from_attribute]`
   |
  ::: $DIR/span-from-proc-macro.rs:7:1
   |
LL | #[error_from_attribute]
   | ----------------------- in this attribute macro expansion

error[E0412]: cannot find type `OtherMissingType` in this scope
  --> $DIR/auxiliary/span-from-proc-macro.rs:30:1
   |
LL | pub fn error_from_derive(_input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | not found in this scope
   | in this expansion of `#[derive(ErrorFromDerive)]`
   |
  ::: $DIR/span-from-proc-macro.rs:10:10
   |
LL | #[derive(ErrorFromDerive)]
   |          --------------- in this derive macro expansion

error[E0308]: mismatched types
  --> $DIR/auxiliary/span-from-proc-macro.rs:16:1
   |
LL | pub fn error_from_bang(_input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `bool`, found integer
   | expected due to this
   | in this expansion of `error_from_bang!`
   |
  ::: $DIR/span-from-proc-macro.rs:14:5
   |
LL |     error_from_bang!();
   |     ------------------ in this macro invocation

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0412.
For more information about an error, try `rustc --explain E0308`.
